--- a/MarsAttack_Igor.html
+++ b/MarsAttack_Igor.html
@@ -17,7 +17,7 @@
 <body>
 <script>
 	//Variáveis do Jogo
-	var canvas, ctx, Altura, Largura, frames = 0,
+	var canvas, ctx, Altura, Largura, frames = 0, maxPulos = 4,
 
 	chao = {
 		y: 550,
@@ -30,8 +30,42 @@
 		}
 	};
 
+	bloco = {
+		x: 50,
+		y: 0,
+		altura: 50,
+		largura: 50,
+		cor: "#ff4e4e",
+		gravidade: 1.3,
+		velocidade: 0,
+		forcaDoPulo: 18,
+		qntPulos:0,
+
+		atualiza: function() {
+			this.velocidade += this.gravidade;
+			this.y += this.velocidade;
+
+			if (this.y > chao.y - this.altura) {
+				this.y = chao.y - this.altura;
+				this.qntPulos = 0;
+			}
+		},
+
+		pula: function() {
+			if (this.qntPulos < maxPulos) {
+				this.velocidade = -this.forcaDoPulo;
+				this.qntPulos++;
+			}
+		},
+
+		desenha: function() {
+			ctx.fillStyle = this.cor;
+			ctx.fillRect(this.x, this.y, this.largura, this.altura);
+		}
+	};
+
 	function clique(event) {
-		alert("clicou");
+		bloco.pula();
 	}
 	
 	function main() {
@@ -48,7 +82,7 @@
 		canvas.height = Altura;
 		canvas.style.border = "1px solid #000";
 
-		ctx = document.createElement("canvas");
+		ctx = canvas.getContext("2d");
 		document.body.appendChild(canvas);
 
 		document.addEventListener("mousedown", clique);
@@ -65,6 +99,8 @@
 	
 	function atualiza() {
 		frames++;
+
+		bloco.atualiza();
 	}
 
 	function desenha() {
@@ -72,6 +108,7 @@
 		ctx.fillRect(0, 0, Largura, Altura);
 
 		chao.desenha();
+		bloco.desenha();
 	}
 
 	//Inicializa o Jogo
