--- a/MarsAttack_Igor.html
+++ b/MarsAttack_Igor.html
@@ -62,6 +62,10 @@
 			ctx.fillStyle = this.cor;
 			ctx.fillRect(this.x, this.y, this.largura, this.altura);
 		}
+	},
+
+	obstaculos = {
+		
 	};
 
 	function clique(event) {
