--- a/MarsAttack_Igor.html
+++ b/MarsAttack_Igor.html
@@ -17,7 +17,7 @@
 <body>
 <script>
 	//Variáveis do Jogo
-	var canvas, ctx, Altura, Largura, frames = 0, maxPulos = 4,
+	var canvas, ctx, Altura, Largura, frames = 0, maxPulos = 4, velocidade = 6,
 
 	chao = {
 		y: 550,
@@ -65,7 +65,47 @@
 	},
 
 	obstaculos = {
-		
+		_obs: [],
+		cores: ["#ffbc1c", "#ff1c1c", "#ff85e1", "#52a7ff", "#78ff5d"],
+		tempoInsere: 0,
+
+		insere: function() {
+			this._obs.push({
+				x: Largura,
+				largura: 30 + Math.floor(21 * Math.random()),
+				altura: 30 + Math.floor(120 * Math.random()),
+				cor: this.cores[Math.floor(5 * Math.random())]
+			});
+
+			this.tempoInsere = 30 + Math.floor(21 * Math.random());
+		},
+
+		atualiza: function()  {
+			if (this.tempoInsere == 0)
+				this.insere();
+			else
+				this.tempoInsere--;
+			
+			for (var i = 0, tam = this._obs.length; i < tam; i++) {
+				var ibs = this._obs[i];
+
+				obs.x -= velocidade;
+
+				if (obs.x <= -obs.largura) {
+					this._obs.splice(i, 1);
+					tam--;
+					i--;
+				}
+			}
+		},
+
+		desenha: function() {
+			for (var i = 0, tam = this._obs.length; i < tam; i++) {
+				var obs = this._obs[i];
+				ctx.fillStyle = obs.cor;
+				ctx.fillRect(obs.x, chao.y - obs.altura, obs.largura, obs.altura);
+			}
+		}
 	};
 
 	function clique(event) {
@@ -105,6 +145,7 @@
 		frames++;
 
 		bloco.atualiza();
+		obstaculos.atualiza();
 	}
 
 	function desenha() {
@@ -112,6 +153,7 @@
 		ctx.fillRect(0, 0, Largura, Altura);
 
 		chao.desenha();
+		obstaculos.desenha();
 		bloco.desenha();
 	}
 
