--- a/MarsAttack_Igor.html
+++ b/MarsAttack_Igor.html
@@ -16,8 +16,8 @@
 </head>
 <body>
 <script>
-	//Variáveis do Jogo
-	var canvas, ctx, Altura, Largura, frames = 0, maxPulos = 4, velocidade = 6,	estadoAtual,
+	// Variáveis do Jogo
+	var canvas, ctx, Altura, Largura, frames = 0, maxPulos = 4, velocidade = 6,	estadoAtual, record,
 
 	estados = {
 		jogar: 0,
@@ -45,7 +45,7 @@
 		gravidade: 1,
 		velocidade: 0,
 		forcaDoPulo: 20,
-		qntPulos:0,
+		qntPulos: 0,
 		score: 0,
 
 		atualiza: function() {
@@ -69,7 +69,13 @@
 		reset: function() {
 			this.velocidade = 0;
 			this.y = 0;
-			this.score = 0,
+
+			if (this.score > record) {
+				localStorage.setItem("record", this.score);
+				record = this.score;
+			}
+
+			this.score = 0;
 		},
 
 		desenha: function() {
@@ -108,7 +114,7 @@
 
 				if (bloco.x < obs.x + obs.largura && bloco.x + bloco.largura >= obs.x && bloco.y + bloco.altura >= chao.y - obs.altura)
 					estadoAtual = estados.perdeu;
-				
+
 				else if (obs.x == 0)
 					bloco.score++;
 
@@ -169,6 +175,11 @@
 		document.addEventListener("mousedown", clique);
 
 		estadoAtual = estados.jogar;
+		record = localStorage.getItem("record");
+
+		if (record == null)
+			record = 0;
+
 		roda();
 	}
 	
@@ -192,6 +203,10 @@
 		ctx.fillStyle = "#50beff";
 		ctx.fillRect(0, 0, Largura, Altura);
 
+		ctx.fillStyle = "#fff";
+		ctx.font = "50px Arial";
+		ctx.fillText(bloco.score, 30, 68);
+
 		if (estadoAtual == estados.jogar) {
 			ctx.fillStyle = "green";
 			ctx.fillRect(Largura / 2 - 50, Altura / 2 - 50, 100, 100);
@@ -200,6 +215,33 @@
 		else if (estadoAtual == estados.perdeu) {
 			ctx.fillStyle = "red";
 			ctx.fillRect(Largura / 2 - 50, Altura / 2 - 50, 100, 100);
+
+			ctx.save();
+			ctx.translate(Largura / 2, Altura / 2);
+			ctx.fillStyle = "#fff";
+			
+			if (bloco.score > record)
+				ctx.fillText("Novo Record!", -150, -65);
+
+			else if (record < 10)
+				ctx.fillText("Record " + record, -99, -65);
+			
+			else if (record >= 10 && record < 100)
+				ctx.fillText("Record " + record, -112, -65);
+
+			else
+				ctx.fillText("Record " + record, -125, -65);
+			
+			if (bloco.score < 10)
+				ctx.fillText(bloco.score, -13, 19);
+
+			else if (bloco.score >= 10 && bloco.score < 100)
+				ctx.fillText(bloco.score, -26, 19);
+
+			else
+				ctx.fillText(bloco.score, -39, 19);
+			
+			ctx.restore();
 		}
 
 		else if (estadoAtual == estados.jogando)
@@ -211,7 +253,7 @@
 	}
 
 	//Inicializa o Jogo
-	main();		//Vídeo 6  ---  07:56
+	main();		//Vídeo 8  ---  00:00
 </script>
 </body>
 </html>
