--- a/MarsAttack_Igor.html
+++ b/MarsAttack_Igor.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Mars Attack</title>
-	<script src="Sprite.js"></script>
+	<script src="Js/Sprite.js"></script>
 	<style>
 		canvas {
 			position: absolute;
