--- a/MarsAttack_Nave_Igor.html
+++ b/MarsAttack_Nave_Igor.html
@@ -17,10 +17,13 @@
 	</div>
 
 	<div id="TelaMsg" class="telaMsg">
-		<button id="btnJogar" class="btnJogar">Jogar</button>
+		<button id="BtnJogar" class="btnJogar">Jogar</button>
 	</div>
 
 	<div id="NaveJog" class="navJog"></div>
+	<div id="TelaMsg" class="telaMsg">
+		<button id="BtnJogar" class="btnJogar">Jogar</button>
+	</div>
 
 </body>	
 </html>
