--- a/MarsAttack_Nave_Igor.html
+++ b/MarsAttack_Nave_Igor.html
@@ -7,23 +7,18 @@
 	<script type="text/javascript" src="JS/JScript.js"></script>
 </head>
 <body>
-
-	<div id="Painel">
-		Planeta
-		<div id="MedidorPlaneta">
-			<div id="BarraPlaneta"></div>
+	<div id="Fundo" class="fundo">
+		<div id="Painel">
+			Planeta
+			<div id="MedidorPlaneta">
+				<div id="BarraPlaneta"></div>
+			</div>
+			<div id="ContBombas"></div>
 		</div>
-		<div id="ContBombas"></div>
+		<div id="NaveJog" class="navJog"></div>
+		<div id="TelaMsg" class="telaMsg">
+			<button id="BtnJogar" class="btnJogar">Jogar</button>
+		</div>
 	</div>
-
-	<div id="TelaMsg" class="telaMsg">
-		<button id="BtnJogar" class="btnJogar">Jogar</button>
-	</div>
-
-	<div id="NaveJog" class="navJog"></div>
-	<div id="TelaMsg" class="telaMsg">
-		<button id="BtnJogar" class="btnJogar">Jogar</button>
-	</div>
-
 </body>	
 </html>
